// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterPage Tests CharacterPage Snapshot with data given 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root character-page css-bhp9pd-MuiPaper-root-MuiCard-root"
  >
    <div
      class="thumbnail-image"
      style="background-image: url(this-it-the-path2.jpg);"
    >
      <div
        class="MuiCardContent-root character-information css-46bh2p-MuiCardContent-root"
      >
        <div
          class="MuiGrid-root character-page-headings css-vj1n65-MuiGrid-root"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-47suzj-MuiTypography-root"
          >
            The Hulk
          </h3>
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter css-ph2xsj-MuiTypography-root"
          >
            List of comics for this character:
          </h5>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CharacterPage Tests CharacterPage Snapshot with no data given 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root character-page css-bhp9pd-MuiPaper-root-MuiCard-root"
  >
    <div
      class="thumbnail-image"
      style="background-image: url(undefined);"
    >
      <div
        class="MuiCardContent-root character-information css-46bh2p-MuiCardContent-root"
      >
        <div
          class="MuiGrid-root character-page-headings css-vj1n65-MuiGrid-root"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-47suzj-MuiTypography-root"
          />
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter css-ph2xsj-MuiTypography-root"
          >
            List of comics for this character:
          </h5>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        />
      </div>
    </div>
  </div>
</div>
`;
